--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ __pycache__/
 .venv/
 .env
 .env.*
-!.env.example
+!env.template
 .secrets/
 *.sqlite3
 
@@ -22,9 +22,16 @@ yarn-error.log*
 
 # Data / artifacts
 data/
+# keep golden test data
+!tests/data/
 *.log
 
 # Coverage / build
 .coverage
 dist/
 build/
+
+# Python packaging
+*.egg-info/
+
+secrets/
